--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ html, body {
     justify-content: center;
     background-color: rgb(2, 1, 75);
 }
+
 .container {
     border-radius: 15px;
     background-color: #ffffff;
@@ -14,21 +15,25 @@ html, body {
     transform: translate(-50%, -50%);
     box-shadow: 0 0 10px rgba(0,0,0,0.5);
 }
+
 .form-container {
     display: grid;
     grid-template-columns: auto auto;
     padding: 10px 40px 0px;
     column-gap: 10px;
 }
-.first-name {
+
+.first_name {
     grid-column: 1;
 }
-.user-name, .email, .password-1, .password-2, .number {
+
+.user_name, .email, .password_1, .password_2, .number {
     display: grid;
     grid-template-rows: auto;
     grid-column: span 2;
     row-gap: 0px;
 }
+
 input[type=text], input[type=email], input[type=password]  {
     align-items: center;
     border: none;
@@ -36,11 +41,13 @@ input[type=text], input[type=email], input[type=password]  {
     padding: 10px;
     margin: 5px 0;
 }
+
 .submit-button {    
     display: flex;
     justify-content: center;
     padding: 0px 20px 20px;
 }
+
 button {
     color: white;
     background-color: #f13000;
@@ -58,4 +65,80 @@ button {
     justify-content: center;
     color: rgb(3, 1, 97);
     background-color: #03cdff;
+}
+
+.form-control {
+	/* margin-bottom: 10px;
+	padding-bottom: 20px; */
+	position: relative;
+}
+
+.form-control label {
+	display: inline-block;
+	margin-bottom: 5px;
+}
+
+.form-control input {
+	border: 2px solid #f0f0f0;
+	border-radius: 4px;
+	display: block;
+	font-family: inherit;
+	font-size: 14px;
+	padding: 10px;
+	/* width: 100%; */
+}
+
+.form-control input:focus {
+	outline: 0;
+	border-color: #777;
+}
+
+.form-control.success input {
+	border-color: #2ecc71;
+}
+
+.form-control.error input {
+	border-color: #e74c3c;
+}
+
+.form-control i {
+	visibility: hidden;
+	position: absolute;
+	top: 40px;
+	right: 10px;
+}
+
+.form-control.success i.fa-check-circle {
+	color: #2ecc71;
+	visibility: visible;
+}
+
+.form-control.error i.fa-exclamation-circle {
+	color: #e74c3c;
+	visibility: visible;
+}
+
+.form-control small {
+	color: #e74c3c;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	visibility: hidden;
+}
+
+.form-control.error small {
+	visibility: visible;
+}
+
+.form button {
+	background-color: #8e44ad;
+	border: 2px solid #8e44ad;
+	border-radius: 4px;
+	color: #fff;
+	display: block;
+	font-family: inherit;
+	font-size: 16px;
+	padding: 10px;
+	margin-top: 20px;
+	width: 100%;
 }
